<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Preventa Android</string>
    <string name="app_version">CHINAS 1.06</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Opciones</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_ruta_de_venta">Ruta De Venta</string>
    <string name="title_activity_lista_clientes_ruta_de_venta">Lista de clientes de ruta de venta</string>
    <string name="title_activity_pedidos">Pedidos</string>
    <string name="title_activity_lista_pedido">Lista de pedidos</string>
    <string name="title_activity_recibir">Recibir</string>
    <string name="title_activity_convenio">Convenios</string>

    <string-array name="motivoconvenio">
        <item>Exclusividad</item>
        <item>Exhibicion</item>
        <item>Introduccion</item>
        <item>Negociacion</item>
        <item>Otro</item>
        <item>Promocion</item>
        <item>Volumen</item>
    </string-array>
    <string-array name="tipoparteoferta">
        <item>BASE</item>
        <item>BONIFICADA</item>
    </string-array>

    <string name="title_activity_of">Of</string>
    <string name="title_activity_lista_ofertas">lista_ofertas</string>
    <string name="title_activity_lista_oferta">lista_oferta</string>
    <string name="title_activity_ofertas">Ofertas</string>
    <string name="title_activity_articulos_oferta">Articulos Oferta</string>
    <string name="title_activity_detalle_oferta">Detalle de ofertas</string>
    <string name="title_activity_dialogo_cantidad">Cantidad</string>
    <string name="title_activity_activity_lista_motivos_no_compra">
        activity_lista_motivos_no_compra
    </string>
    <string name="no_visitados">No Visitados</string>
    <string name="visitados">Visitados</string>
    <string name="todos">Todos</string>
    <string name="enviar_datos">Enviar Datos</string>
    <string name="ventas">Ventas</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="cantidad">Cantidad</string>
    <string name="cerrado">Cerrado</string>
    <string name="descuento_porcentaje">Dt%</string>
    <string name="final_pesos">Final</string>
    <string name="no_estaba_el_responsable">No estaba el responsable</string>
    <string name="no_tiene_dinero">No tiene dinero</string>
    <string name="ok">OK</string>
    <string name="tiene_stock">Tiene Stock</string>
    <string name="total_pesos">Total: $</string>
    <string name="total_pesos_pedido">Total del pedido</string>
    <string name="total_pesos_precarga">Total de la precarga</string>
    <string name="unit_precio">Unit.</string>
    <string name="cantidad_corto">Cant.</string>
    <string name="cantidad_frac">Unid.</string>
    <string name="cantidad_bult">Bultos</string>
    <string name="recibir_datos">Recibir Datos</string>
    <string name="descuento">Descuento</string>
    <string name="codigo">Código</string>
    <string name="codigo_art">Código art.</string>
    <string name="oferOperNoConfirmada">Editar oferta</string>
    <string name="volver">Volver</string>
    <string name="continuar">Continuar</string>
    <string name="confirmar">Confirmar</string>
    <string name="view_pager">View Pager</string>
    <string name="dtos_convs">Descuentos/Convenios</string>
    <string name="tomar_foto_a_cliente">Tomar foto a Cliente</string>
    <string name="vencimiento">Vencimiento</string>
    <string name="sin_cargo">Sin cargo</string>
    <string name="versi_n">Versión: </string>
    <string name="cantidad_bultos">Bultos</string>
    <string name="cantidad_fracciones">Unidades</string>
    <string name="buscar_clientes">Buscar nombre o código…</string>
    <string name="buscar">Buscar</string>
    <string name="busca_artic">Buscador de artículos</string>
    <string name="not_logged_in">NO ESTA LOGUEADO</string>

    <!-- Strings related to login -->
    <string name="usuario">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Usuario y contraseña no coinciden.</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="recibir">Recibir</string>
    <string name="motivo">Motivo</string>
    <string name="precio_unitario">Precio Unitario</string>
    <string name="precio_unitario_lista">Precio de Lista</string>
    <string name="con_dto">Con Descuento</string>
    <string name="articulo">Artículo</string>
    <string name="precio_unitario_dto_folder">Precio Oferta</string>
    <string name="folder">Folder</string>
    <string name="agregar">Agregar</string>
    <string name="ordenar_lista">Ordenar lista</string>
    <string name="nombre">Nombre</string>
    <string name="domicilio">Domicilio</string>
    <string name="cuit">Cuit</string>
    <string name="recorrido">Recorrido</string>
    <string name="nueva_precarga">Nueva precarga</string>
    <string name="stock">Stock</string>

</resources>
