<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tabPedido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:addStatesFromChildren="false"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_ArticuloSeleccionado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtArticuloSeleccionado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/articulo"
            android:inputType="textNoSuggestions"
            android:text="AGUA SAVORIZADA 12X500 ML"
            tools:ignore="HardcodedText" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_codigoArticulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/il_ArticuloSeleccionado">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtCodigoArticulo"
            style="@style/Base.V7.Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="center|start"
            android:hint="@string/codigo"
            android:inputType="number"
            android:text="25550" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_articulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarCodigoArticulo"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/il_ArticuloSeleccionado">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtArticulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/codigo_art"
            android:inputType="number"
            android:nextFocusDown="@+id/edtArticulo"
            android:selectAllOnFocus="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnBuscarCodigoArticulo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/search"
        android:focusable="false"
        android:nextFocusDown="@+id/edtArticulo"
        app:layout_constraintBottom_toTopOf="@+id/il_precioUnitario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/il_articulo"
        app:layout_constraintTop_toBottomOf="@id/il_ArticuloSeleccionado" />
    <!--</android.support.constraint.ConstraintLayout>-->

    <!--DTO / PRECIO-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_precioUnitarioLista"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:focusable="false"
        app:layout_constraintEnd_toStartOf="@+id/il_precioUnitario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/il_codigoArticulo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtUnitarioLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/precio_unitario_lista"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_precioUnitario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/il_precioUnitarioLista"
        app:layout_constraintTop_toBottomOf="@id/il_codigoArticulo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtUnitarioDtoFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/precio_unitario_dto_folder"
            android:inputType="numberDecimal"
            android:text="352.11" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_dto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:focusable="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/il_precioUnitario">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtDescuento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/descuento"
            android:inputType="numberDecimal"
            android:text="12.5%" />

    </android.support.design.widget.TextInputLayout>

    <!--<android.support.constraint.ConstraintLayout-->
    <!--android:id="@+id/linearLayout"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:gravity="center"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@id/il_dto">-->

    <Button
        android:id="@+id/btnFolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/folder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/il_precioUnitario" />

    <TextView
        android:id="@+id/tvBultos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad_bultos"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btnFolder" />

    <com.travijuu.numberpicker.library.NumberPicker
        android:id="@+id/etCantidadBultos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:custom_layout="@layout/custom_np_layout"
        app:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBultos"
        app:min="0"
        app:unit="1"
        app:value="0" />

    <TextView
        android:id="@+id/tvFracciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad_fracciones"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnFolder" />

    <com.travijuu.numberpicker.library.NumberPicker
        android:id="@+id/etCantidadUnidades"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:custom_layout="@layout/custom_np_layout"
        app:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvFracciones"
        app:min="0"
        app:unit="1"
        app:value="0" />

    <!--</android.support.constraint.ConstraintLayout>-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_precioFinal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:focusable="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCantidadBultos">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtFinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/final_pesos"
            android:inputType="numberDecimal"
            android:text="556.23" />
    </android.support.design.widget.TextInputLayout>

    <!--AGREGAR-->
    <Button
        android:id="@+id/btnOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/il_precioFinal"
        app:layout_constraintTop_toTopOf="@+id/il_precioFinal" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="180dp"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="13dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="184dp" />

</android.support.constraint.ConstraintLayout>